dev/tests/cases/neg/36_bare_builtin_stmt.tv
df main() -> void {
    fixed s: str = "  x  ";
    trim(s);
    echo!(s);
}
